Code cleanup and changes. Bumped version.

--- a/skype_not_found/oops.html
+++ b/skype_not_found/oops.html
@@ -10,7 +10,7 @@ BODY {
     PADDING-RIGHT: 0px; PADDING-LEFT: 0px; PADDING-BOTTOM: 0px; MARGIN: 0px; PADDING-TOP: 0px
 }
 BODY {
-    BACKGROUND: url(bg.png) white no-repeat left top; FONT: 78%/130% "Lucida Grande",Verdana,Arial,sans-serif; OVERFLOW: hidden; WIDTH: 540px; COLOR: white; HEIGHT: 305px
+    BACKGROUND: url(pix/bg.png) white no-repeat left top; FONT: 78%/130% "Lucida Grande",Verdana,Arial,sans-serif; OVERFLOW: hidden; WIDTH: 540px; COLOR: white; HEIGHT: 305px
 }
 H1 {
     PADDING-RIGHT: 0px; DISPLAY: block; PADDING-LEFT: 0px; FONT-WEIGHT: 600; FONT-SIZE: 38px; LEFT: 107px; PADDING-BOTTOM: 0px; MARGIN: 0px; COLOR: #00aff0; LINE-HEIGHT: 38px; PADDING-TOP: 0px; FONT-FAMILY: "Helvetica Neue Light",Helvetica,Arial,sans-serif; POSITION: absolute; TOP: 36px
